Fixes #2 by correctly quoting attributes

--- a/ColmarAcademy/index.html
+++ b/ColmarAcademy/index.html
@@ -24,7 +24,7 @@
             <h2>Academy</h2>
           </div>
         </div>
-        <nav class=header-nav>
+        <nav class="header-nav">
           <ul role="presentation">
             <li>On campus</li>
             <li>Online</li>
@@ -233,7 +233,7 @@
               <p> "Curabitur tempor enim nec odio semper lacinia. Ut odio turpis, rutrum sed pharetra ut, suscipit sit amet augue. Mauris vestibulum, lectus ut dapibus imperdiet, eros tortor varius massa, at gravida lorem massa id magna."</p>
             </div>
           </div>
-          <div class=exhibit-examples>
+          <div class="exhibit-examples">
             <!-- Fisma thesis -->
             <div class="exhibit-block">
               <div class="exhibit-image">
@@ -262,7 +262,7 @@
 
     <!-- Footer -->
     <footer>
-      <div class=footer>
+      <div class="footer">
         <div class="copyright">
           <p>© 2016  Colmar Academy, All rights reserved</p>
         </div>
